@@ -1,0 +1,93 @@
+new_plane = convertToPoly (plane width:10.00000 length:5.62500 lengthsegs:1 widthsegs:1 name:"TracksperantoPlane" backFaceCull:True)
+-- Data for tracker Parabolic_1_from_top_left
+animate on (
+pt = Point name:"Parabolic_1_from_top_left" pos:[-5.00000,2.81250,0.000] size:1.000000 axistripod:off centermarker:on isSelected:on
+at time 0 pt.pos.x = -5.00000
+at time 0 pt.pos.y = 2.81250
+at time 1 pt.pos.x = -4.50000
+at time 1 pt.pos.y = 1.74375
+at time 2 pt.pos.x = -4.00000
+at time 2 pt.pos.y = 0.78750
+at time 3 pt.pos.x = -3.50000
+at time 3 pt.pos.y = -0.05625
+at time 4 pt.pos.x = -3.00000
+at time 4 pt.pos.y = -0.78750
+at time 5 pt.pos.x = -2.50000
+at time 5 pt.pos.y = -1.40625
+at time 6 pt.pos.x = -2.00000
+at time 6 pt.pos.y = -1.91250
+at time 7 pt.pos.x = -1.50000
+at time 7 pt.pos.y = -2.30625
+at time 8 pt.pos.x = -1.00000
+at time 8 pt.pos.y = -2.58750
+at time 9 pt.pos.x = -0.50000
+at time 9 pt.pos.y = -2.75625
+at time 12 pt.pos.x = 1.00000
+at time 12 pt.pos.y = -2.58750
+at time 13 pt.pos.x = 1.50000
+at time 13 pt.pos.y = -2.30625
+at time 14 pt.pos.x = 2.00000
+at time 14 pt.pos.y = -1.91250
+at time 15 pt.pos.x = 2.50000
+at time 15 pt.pos.y = -1.40625
+at time 16 pt.pos.x = 3.00000
+at time 16 pt.pos.y = -0.78750
+at time 17 pt.pos.x = 3.50000
+at time 17 pt.pos.y = -0.05625
+at time 18 pt.pos.x = 4.00000
+at time 18 pt.pos.y = 0.78750
+at time 19 pt.pos.x = 4.50000
+at time 19 pt.pos.y = 1.74375
+at time 20 pt.pos.x = 5.00000
+at time 20 pt.pos.y = 2.81250
+)
+-- Data for tracker Parabolic_2_from_bottom_right
+animate on (
+pt = Point name:"Parabolic_2_from_bottom_right" pos:[5.00000,-2.81250,0.000] size:1.000000 axistripod:off centermarker:on isSelected:on
+at time 0 pt.pos.x = 5.00000
+at time 0 pt.pos.y = -2.81250
+at time 1 pt.pos.x = 4.50000
+at time 1 pt.pos.y = -1.74375
+at time 2 pt.pos.x = 4.00000
+at time 2 pt.pos.y = -0.78750
+at time 3 pt.pos.x = 3.50000
+at time 3 pt.pos.y = 0.05625
+at time 4 pt.pos.x = 3.00000
+at time 4 pt.pos.y = 0.78750
+at time 5 pt.pos.x = 2.50000
+at time 5 pt.pos.y = 1.40625
+at time 6 pt.pos.x = 2.00000
+at time 6 pt.pos.y = 1.91250
+at time 7 pt.pos.x = 1.50000
+at time 7 pt.pos.y = 2.30625
+at time 8 pt.pos.x = 1.00000
+at time 8 pt.pos.y = 2.58750
+at time 9 pt.pos.x = 0.50000
+at time 9 pt.pos.y = 2.75625
+at time 12 pt.pos.x = -1.00000
+at time 12 pt.pos.y = 2.58750
+at time 13 pt.pos.x = -1.50000
+at time 13 pt.pos.y = 2.30625
+at time 14 pt.pos.x = -2.00000
+at time 14 pt.pos.y = 1.91250
+at time 15 pt.pos.x = -2.50000
+at time 15 pt.pos.y = 1.40625
+at time 16 pt.pos.x = -3.00000
+at time 16 pt.pos.y = 0.78750
+at time 17 pt.pos.x = -3.50000
+at time 17 pt.pos.y = 0.05625
+at time 18 pt.pos.x = -4.00000
+at time 18 pt.pos.y = -0.78750
+at time 19 pt.pos.x = -4.50000
+at time 19 pt.pos.y = -1.74375
+at time 20 pt.pos.x = -5.00000
+at time 20 pt.pos.y = -2.81250
+)
+-- Data for tracker SingleFrame_InTheMiddle
+animate on (
+pt = Point name:"SingleFrame_InTheMiddle" pos:[0.05208,0.05208,0.000] size:1.000000 axistripod:off centermarker:on isSelected:on
+at time 0 pt.pos.x = 0.05208
+at time 0 pt.pos.y = 0.05208
+)
+animate off
+EnableSceneRedraw()
